[project]
name = "moshi"
requires-python = ">= 3.10"
description = "Moshi is moshi"
dependencies = [
    "numpy >= 1.26, < 2.2",
    "safetensors >= 0.4.0, < 0.5",
    "huggingface-hub >= 0.24, < 0.25",
    "einops == 0.7",
    "sentencepiece == 0.2",
    "sounddevice == 0.5",
    "sphn >= 0.1.4",
    "torch >= 2.2.0, < 2.5",
    "aiohttp>=3.10.5, <3.11",
]
authors = [{name="Laurent Mazaré", email="laurent@kyutai.org"}]
maintainers = [{name="Laurent Mazaré", email="laurent@kyutai.org"}]
license = {text = "MIT"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "moshi.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pyright",
    "flake8",
    "pre-commit",
]
