[project]
name = "moshi"
requires-python = ">= 3.10"
description = "Moshi is moshi"
dependencies = [
    "numpy >= 1.26, < 2.3",
    "safetensors >= 0.4.0, < 0.6",
    "huggingface-hub >= 0.24, < 0.29",
    "bitsandbytes >= 0.45, < 0.46; sys_platform == 'linux'",
    "einops >= 0.7, < 0.9",
    "sentencepiece == 0.2",
    "sounddevice == 0.5",
    "sphn >= 0.1.4, < 0.2.0",
    "torch >= 2.2.0, < 2.7",
    "aiohttp>=3.10.5, <3.12",
    "pytest >= 8.3.3",
    "gradio>=5.34.1",
    "omegaconf>=2.3.0",
    "jiwer<3.1.0",
    "julius>=0.2.7",
    "whisper>=1.1.10",
    "openai-whisper>=20250625",
    "datasets==2.15.*",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
]
authors = [{name="Laurent Mazaré", email="laurent@kyutai.org"}]
maintainers = [{name="Laurent Mazaré", email="laurent@kyutai.org"}]
license = {text = "MIT"}
dynamic = ["version"]
readme = "README.md"

[project.scripts]
moshi-server = "moshi.server:main"
moshi-client = "moshi.client:main"

[tool.setuptools.dynamic]
version = {attr = "moshi.__version__"}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "flake8",
    "pre-commit",
    "gradio-webrtc>=0.0.18"
]
