[project]
name = "moshi_mlx"
requires-python = ">= 3.10"
description = "Moshi is moshi, but running on macOS"
dependencies = [
    "numpy >= 2.1.0, < 2.3",
    "safetensors >= 0.4.0, < 0.6",
    "huggingface-hub >= 0.24, < 0.29",
    "rustymimi == 0.4.1",
    "sentencepiece == 0.2",
    "sounddevice == 0.5",
    "sphn >= 0.1.4, < 0.2.0",
    "mlx >= 0.26.0, < 0.27",
    "aiohttp>=3.10.5, <3.12",
]
authors = [{name="Laurent Mazaré", email="laurent@kyutai.org"}]
maintainers = [{name="Laurent Mazaré", email="laurent@kyutai.org"}]
license = {text = "MIT"}
dynamic = ["version"]
readme = "README.md"

[project.scripts]
moshi-local = "moshi_mlx.local:main"
moshi-local-web = "moshi_mlx.local_web:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "moshi_mlx.__version__"}

[project.optional-dependencies]
dev = [
    "pyright",
    "flake8",
    "pre-commit",
]
