[workspace]
members = [
    "mimi-pyo3",
    "moshi-backend",
    "moshi-cli",
    "moshi-core",
]
resolver = "2"

[workspace.package]
version = "0.2.4"
edition = "2021"
license = "MIT/Apache-2.0"
description = "moshi, a real-time voice AI"
repository = "https://github.com/kyutai-labs/moshi"
keywords = ["machine-learning", "audio"]
categories = ["science"]


[workspace.dependencies]
candle = { version = "0.7.2", package = "candle-core" }
candle-nn = "0.7.2"
candle-transformers = "0.7.2"
candle-flash-attn = "0.7.2"

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
