[package]
name = "moshi-backend"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7.3", features = ["ws"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64ct = { version = "1.6.0", features = ["alloc"] }
bincode = "1.3.3"
byteorder = "1.5.0"
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.10.1"
futures-util = "0.3.30"
hf-hub = { version = "0.3.2", features = ["tokio"] }
rcgen = "0.13.1"
http = "1.1.0"
lazy_static = "1.5.0"
log = "0.4.20"
moshi = { path = "../moshi-core", version = "0.2.4" }
ogg = { version = "0.9.1", features = ["async"] }
opus = "0.3.0"
rand = { version = "0.8.5", features = ["getrandom"] }
rand_chacha = "0.3.1"
regex = "1.10.3"
rubato = "0.15.0"
sentencepiece = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
sha3 = "0.10.8"
symphonia = { version = "0.5.3", features = ["all"] }
tokenizers = "0.15.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.24.1"
tower = "0.4.13"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"

[build-dependencies]
anyhow = "1"
vergen = { version = "8.3.1", features = ["build", "cargo", "git", "gitcl", "rustc", "si"] }

[features]
default = []
cuda = ["moshi/cuda", "candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["moshi/metal", "candle/metal", "candle-nn/metal", "candle-transformers/metal"]
