[package]
name = "moshi-backend"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
base64ct = { workspace = true }
bincode = { workspace = true }
byteorder = { workspace = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
hf-hub = { workspace = true }
rcgen = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
moshi = { workspace = true }
ogg = { workspace = true }
opus = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
regex = { workspace = true }
rubato = { workspace = true }
sentencepiece = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
symphonia = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true }

[features]
default = []
cuda = ["moshi/cuda", "candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["moshi/metal", "candle/metal", "candle-nn/metal", "candle-transformers/metal"]

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false

