[package]
name = "moshi-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
byteorder = { workspace = true }
candle = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
cpal = { workspace = true }
crossterm = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
moshi = { workspace = true }
native-tls = { workspace = true }
ogg = { workspace = true }
opus = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true }
rubato = { workspace = true }
rustls = { workspace = true }
sentencepiece = { workspace = true }
serde_json = { workspace = true }
symphonia = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true }
tracing-subscriber = { workspace = true }
tui-logger = { workspace = true }

[features]
default = []
cuda = ["moshi/cuda", "candle/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["moshi/metal", "candle/metal", "candle-nn/metal", "candle-transformers/metal"]

[profile.release]
debug = true

[profile.release-no-debug]
inherits = "release"
debug = false
